Fix the size of the card image on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ body {
 .card {
     display: inline-block;
     background-size: contain;
-    width: 16%;
+    width: 14%;
     margin: 0 5px;
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
 }
